<resources>
    <string name="app_name">Strive Health</string>
    <string name="title_activity_controlcenter">Strive Health</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_quit">Quit</string>
    <string name="controlcenter_fetch_activity_data">Sync</string>
    <string name="controlcenter_start_sleepmonitor">Sleep Monitor (ALPHA)</string>
    <string name="controlcenter_find_device">Find lost Device…</string>
    <string name="controlcenter_take_screenshot">Take Screenshot</string>
    <string name="controlcenter_disconnect">Disconnect</string>
    <string name="controlcenter_delete_device">Delete Device</string>
    <string name="controlcenter_delete_device_name">Delete %1$s</string>
    <string name="controlcenter_delete_device_dialogmessage">This will delete the device and all associated data!</string>
    <string name="title_activity_debug">Debug</string>
    <string name="title_activity_appmanager">App Manager</string>
    <string name="appmanager_cached_watchapps_watchfaces">Apps in cache</string>
    <string name="appmanager_installed_watchapps">Installed apps</string>
    <string name="appmanager_installed_watchfaces">Installed watchfaces</string>
    <string name="appmananger_app_delete">Delete</string>
    <string name="appmananger_app_delete_cache">Delete and remove from cache</string>
    <string name="appmananger_app_reinstall">Reinstall</string>
    <string name="appmanager_app_openinstore">Search in Pebble Appstore</string>
    <string name="appmanager_health_activate">Activate</string>
    <string name="appmanager_health_deactivate">Deactivate</string>
    <string name="appmanager_hrm_activate">Activate HRM</string>
    <string name="appmanager_hrm_deactivate">Deactivate HRM</string>
    <string name="appmanager_weather_activate">Activate system weather app</string>
    <string name="appmanager_weather_deactivate">Deactivate system weather app</string>
    <string name="appmanager_weather_install_provider">Install the weather notification app</string>
    <string name="app_configure">Configure</string>
    <string name="app_move_to_top">Move to top</string>
    <string name="title_activity_appblacklist">Notification Blacklist</string>
    <string name="title_activity_fw_app_insaller">FW/App installer</string>
    <string name="fw_upgrade_notice">You are about to install firmware %s instead of the one currently on your Mi Band.</string>
    <string name="fw_multi_upgrade_notice">You are about to install firmwares %1$s and %2$s instead of the ones currently on your Mi Band.</string>
    <string name="miband_firmware_known">This firmware has been tested and is known to be compatible with Vimo.</string>
    <string name="miband_firmware_unknown_warning">"This firmware is untested and may not be compatible with Vimo.\n\nYou are NOT encouraged to flash it to your Mi Band!"</string>
    <string name="miband_firmware_suggest_whitelist">If you still want to proceed and things continue to work properly afterwards, please tell the Vimo developers to whitelist firmware version: %s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General Settings</string>
    <string name="pref_title_general_autoconnectonbluetooth">Connect when Bluetooth On</string>
    <string name="pref_title_general_autocreonnect">Automatically Reconnect</string>
    <string name="pref_title_audo_player">Preferred Audioplayer</string>
    <string name="pref_default">Default</string>
    <string name="pref_header_datetime">Date and Time</string>
    <string name="pref_title_datetime_syctimeonconnect">Sync time</string>
    <string name="pref_summary_datetime_syctimeonconnect">Sync time to device when connecting and when time or timezone changes on Android</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_minimize_priority">Hide the Vimo notification</string>
    <string name="pref_summary_minimize_priority_off">The icon in the status bar and the notification in the lockscreen are shown</string>
    <string name="pref_summary_minimize_priority_on">The icon in the status bar and the notification in the lockscreen are hidden</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications_repetitions">Repetitions</string>
    <string name="pref_title_notifications_call">Phone Calls</string>
    <string name="pref_title_notifications_sms">SMS</string>
    <string name="pref_title_notifications_k9mail">eMail</string>
    <string name="pref_title_notifications_pebblemsg">Pebble Messages</string>
    <string name="pref_summary_notifications_pebblemsg">Support for applications which send Notifications to the Pebble via PebbleKit.</string>
    <string name="pref_title_notifications_generic">Generic notification support</string>
    <string name="pref_title_whenscreenon">… also when screen is on</string>
    <string name="pref_title_notification_filter">Do Not Disturb</string>
    <string name="pref_summary_notification_filter">Stop unwanted Notifications from being sent based on the Do Not Disturb mode.</string>
    <string name="pref_title_transliteration">Transliteration</string>
    <string name="pref_summary_transliteration">Enable this if your device has no support for your language\'s font (Currently Cyrillic only)</string>
    <string name="always">always</string>
    <string name="when_screen_off">when screen is off</string>
    <string name="never">never</string>
    <string name="pref_blacklist">Blacklist Apps</string>
    <string name="pref_header_cannned_messages">Canned Messages</string>
    <string name="pref_title_canned_replies">Replies</string>
    <string name="pref_title_canned_reply_suffix">Common suffix</string>
    <string name="pref_title_canned_messages_dismisscall">Call Dismissal</string>
    <string name="pref_title_canned_messages_set">Update on Pebble</string>
    <string name="pref_header_development">Developer Options</string>
    <string name="pref_title_development_miaddr">Mi Band address</string>
    <string name="pref_title_pebble_settings">Pebble Settings</string>
    <string name="pref_header_activitytrackers">Activity Trackers</string>
    <string name="pref_title_pebble_activitytracker">Preferred Activitytracker</string>
    <string name="pref_title_pebble_sync_health">Sync Pebble Health</string>
    <string name="pref_title_pebble_sync_misfit">Sync Misfit</string>
    <string name="pref_title_pebble_sync_morpheuz">Sync Morpheuz</string>
    <string name="pref_title_enable_outgoing_call">Support outgoing calls</string>
    <string name="pref_summary_enable_outgoing_call">Disabling this will also stop the Pebble 2/LE to vibrate on outgoing calls</string>
    <string name="pref_title_enable_pebblekit">Allow 3rd Party Android App Access</string>
    <string name="pref_summary_enable_pebblekit">Enable experimental support for Android Apps using PebbleKit</string>
    <string name="pref_title_sunrise_sunset">Sunrise and Sunset</string>
    <string name="pref_summary_sunrise_sunset">Send sunrise and sunset times based on the location to the pebble timeline</string>
    <string name="pref_title_autoremove_notifications">Autoremove dismissed Notifications</string>
    <string name="pref_summary_autoremove_notifications">Notifications are automatically removed from the Pebble when dismissed from the Android device</string>
    <string name="pref_title_pebble_privacy_mode">Privacy mode</string>
    <string name="pref_pebble_privacy_mode_off">Normal notifications and incoming calls display.</string>
    <string name="pref_pebble_privacy_mode_content">Shift the notification text off-screen. Hide the caller\'s name on incoming calls.</string>
    <string name="pref_pebble_privacy_mode_complete">Show only the notification icon. Hide the caller\'s name and number on incoming calls.</string>
    <string name="pref_header_location">Location</string>
    <string name="pref_title_location_aquire">Acquire Location</string>
    <string name="pref_title_location_latitude">Latitude</string>
    <string name="pref_title_location_longitude">Longitude</string>
    <string name="pref_title_location_keep_uptodate">Keep location updated</string>
    <string name="pref_summary_location_keep_uptodate">Try to get the current location at runtime, use the stored location as fallback</string>
    <string name="toast_enable_networklocationprovider">Please enable network location</string>
    <string name="toast_aqurired_networklocation">location acquired</string>
    <string name="pref_title_pebble_forceprotocol">Force Notification Protocol</string>
    <string name="pref_summary_pebble_forceprotocol">This option forces using the latest notification protocol depending on the firmware version. ENABLE ONLY IF YOU KNOW WHAT YOU ARE DOING!</string>
    <string name="pref_title_pebble_forceuntested">Enable untested features</string>
    <string name="pref_summary_pebble_forceuntested">Enable features that are untested. ENABLE ONLY IF YOU KNOW WHAT YOU ARE DOING!</string>
    <string name="pref_title_pebble_forcele">Always prefer BLE</string>
    <string name="pref_summary_pebble_forcele">Use experimental Pebble LE support for all Pebbles instead of BT classic, requires paring a "Pebble LE" after non LE had been connected once</string>
    <string name="pref_title_pebble_mtu_limit">Pebble 2/LE GATT MTU limit</string>
    <string name="alarm_sun_short">Sun</string>
    <string name="alarm_mon_short">Mon</string>
    <string name="alarm_tue_short">Tue</string>
    <string name="alarm_wed_short">Wed</string>
    <string name="alarm_thu_short">Thu</string>
    <string name="alarm_fri_short">Fri</string>
    <string name="alarm_sat_short">Sat</string>
    <string name="activity_db_management_import_export_explanation">The database operations use the following path on your device. \nThis path is accessible to other Android applications and your computer. \nExpect to find your exported database (or place the database you want to import) there:</string>
    <string name="activity_db_management_merge_old_explanation">The activity data recorded with Vimo versions prior to 0.12 must be converted to a new format. \nYou can do this using the button below. Be aware that you must be connected to the device you want to associate the old activity data with! \nIf you already imported your data and are happy with the result, you may delete the old database.</string>
    <string name="activity_db_management_merge_old_title">Legacy Database Import / Delete</string>
    <string name="delete_old_db">Delete old DB</string>
    <string name="empty_db">Empty DB</string>
    <string name="export_db">Export DB</string>
    <string name="import_db">Import DB</string>
    <string name="import_old_activity_data">Import old activity data</string>
    <string name="warning_by_pushing_this_button_you_will_wipe_your_database_and_start_from_scratch">Warning! By pushing this button you will wipe your database and start from scratch.</string>
    <string name="heart_rate_test">Heart Rate Test</string>
    <string name="message_caller">Message / Caller</string>
    <string name="test_new_functionality">Test New Functionality</string>
    <string name="create_test_notification">create test notification</string>
    <string name="incoming_call">incoming call</string>
    <string name="outgoing_call">outgoing call</string>
    <string name="reboot">reboot</string>
    <string name="send_as_sms">send as SMS</string>
    <string name="set_music_info">set music info</string>
    <string name="set_time">set time</string>
    <string name="start_call">start call</string>
    <string name="smart">(Smart)</string>
    <string name="_00_00">00:00</string>
</resources>