<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nodomain.freeyourgadget.vimo.activities.ControlCenter">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/exportDBButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/export_db"
                    tools:ignore="ButtonStyle"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/importDBButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/import_db"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <TextView
                android:id="@+id/db_management_intro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_db_management_import_export_explanation"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/activity_db_management_path"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <TextView
                android:id="@+id/mergeOldActivityDataTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/activity_db_management_merge_old_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/accent" />

            <TextView
                android:id="@+id/mergeOldActivityDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_db_management_merge_old_explanation"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/mergeOldActivityData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1"
                    android:text="@string/import_old_activity_data"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/deleteOldActivityDB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1"
                    android:text="@string/delete_old_db"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <TextView
                android:id="@+id/emptyDBText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/warning_by_pushing_this_button_you_will_wipe_your_database_and_start_from_scratch"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/emptyDBButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_db" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
