<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nodomain.freeyourgadget.vimo.activities.ControlCenter">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:rowCount="15">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:text="@string/message_caller"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="Test"
                tools:ignore="HardcodedText,LabelFor" />

            <Spinner
                android:id="@+id/sendTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"
                android:layout_columnSpan="2"
                android:text="@string/send_as_sms" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:text="Send"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/incomingCallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="4"
                android:text="@string/incoming_call" />

            <Button
                android:id="@+id/outgoingCallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_row="4"
                android:text="@string/outgoing_call" />

            <Button
                android:id="@+id/startCallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="5"
                android:text="@string/start_call" />

            <Button
                android:id="@+id/endCallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_row="5"
                android:text="end call"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/setTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="6"
                android:text="@string/set_time" />

            <Button
                android:id="@+id/setMusicInfoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_row="6"
                android:text="@string/set_music_info" />

            <Button
                android:id="@+id/HearRateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="7"
                android:text="@string/heart_rate_test" />

            <Button
                android:id="@+id/rebootButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="8"
                android:text="@string/reboot" />

            <Button
                android:id="@+id/testNotificationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="9"
                android:text="@string/create_test_notification" />

            <Button
                android:id="@+id/testNewFunctionality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="10"
                android:text="@string/test_new_functionality" />
        </GridLayout>
    </ScrollView>

</RelativeLayout>
